# poetry_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
project_poetry/: poetry_demo.py
tests/: test.csv  test_sample.py
