[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["gmoriki"]
readme = "README.md"
packages = [{include = "project_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
